// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  direction: row;
  height: 100vh;
  width: 100vw;
}

.c1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c2 {
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
  background-image: url(test);
  background-repeat: no-repeat;
  background-position: 80% 50%;
  background-size: cover;
}

<div
  className="c0"
>
  <div
    className="c1"
  />
  <div
    className="c2"
    src="url(test)"
  />
</div>
`;

exports[`renders correctly with children 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  direction: row;
  height: 100vh;
  width: 100vw;
}

.c1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c2 {
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
  background-image: url(test);
  background-repeat: no-repeat;
  background-position: 80% 50%;
  background-size: cover;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div>
      content
    </div>
  </div>
  <div
    className="c2"
    src="url(test)"
  />
</div>
`;
